<resources>
    <string name="app_name">Calc</string>
    <string name="key_3">3</string>
    <string name="key_0">0</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="point">.</string>
    <string name="equally">=</string>
    <string name="addition">+</string>
    <string name="backspace">⌫</string>
    <string name="clear">c</string>
    <string name="division">/</string>
    <string name="multiplication">*</string>
    <string name="subtraction">-</string>
    <string name="todo">TODO</string>
    <string name="theme_one" translatable="false">Theme_One</string>
    <string name="theme_two" translatable="false">Theme_Two</string>
    <string name="preferens" translatable="false">preferens</string>
    <string name="open_link" translatable="false">open link</string>
</resources>